--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,5 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-
+    implementation 'com.github.amarjain07:StickyScrollView:1.0.2'
 }
