--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,8 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
+        renderscriptTargetApi 21
+        renderscriptSupportModeEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -60,5 +61,9 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.amarjain07:StickyScrollView:1.0.2'
+
+
+
 }
