--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,24 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.amarjain07:StickyScrollView:1.0.2'
 
+//    //Butterknife
+//    implementation 'com.jakewharton:butterknife:8.8.1'
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+//
+//    //dexter permissions
+//    implementation "com.karumi:dexter:5.0.0"
 
+    // circular imageview
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+
+//    //Glide
+//    implementation 'com.github.bumptech.glide:glide:4.7.1'
+//    implementation 'com.github.bumptech.glide:annotations:4.7.1'
+//    implementation('com.github.bumptech.glide:okhttp3-integration:4.0.0') {
+//        exclude group: 'glide-parent'
+//    }
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+//
+//    implementation 'com.github.yalantis:ucrop:2.2.2'
 
 }
