--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,9 @@ dependencies {
 //    implementation "com.karumi:dexter:5.0.0"
 
     // circular imageview
-    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+//    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    implementation 'com.mikhaellopez:circularimageview:4.3.0'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
 //    //Glide
 //    implementation 'com.github.bumptech.glide:glide:4.7.1'
