--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PractiseDoNeed" >
         <activity android:name=".test" />
-        <activity android:name=".ProfileSetting" />
+        <activity android:name=".ProfileSetting"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".profile" />
         <activity
             android:name=".homePage"
