--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.practisedoneed" >
+    package="com.example.practisedoneed">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,17 +14,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PractiseDoNeed" >
+        android:theme="@style/Theme.PractiseDoNeed">
+        <activity android:name=".ResetPassword"></activity>
         <activity android:name=".test" />
-        <activity android:name=".ProfileSetting"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".ProfileSetting"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".profile" />
         <activity
             android:name=".homePage"
             android:label="@string/title_activity_home_page" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
