--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.amarjain07:StickyScrollView:1.0.2'
 
+    implementation 'com.github.bumptech.glide:annotations:4.12.0'
+
+
 //    //Butterknife
 //    implementation 'com.jakewharton:butterknife:8.8.1'
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -77,7 +80,6 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
 //    //Glide
-//    implementation 'com.github.bumptech.glide:glide:4.7.1'
 //    implementation 'com.github.bumptech.glide:annotations:4.7.1'
 //    implementation('com.github.bumptech.glide:okhttp3-integration:4.0.0') {
 //        exclude group: 'glide-parent'
