--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,17 +75,9 @@ dependencies {
 //    implementation "com.karumi:dexter:5.0.0"
 
     // circular imageview
-//    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+//    implementation 'com.mikhaellopez:circularima geview:3.2.0'
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
-//    //Glide
-//    implementation 'com.github.bumptech.glide:annotations:4.7.1'
-//    implementation('com.github.bumptech.glide:okhttp3-integration:4.0.0') {
-//        exclude group: 'glide-parent'
-//    }
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-//
-//    implementation 'com.github.yalantis:ucrop:2.2.2'
-
+    implementation 'com.android.support:design:30.0.0'
 }
